# ibm_data_science

./: .gitignore  pyproject.toml
classification/: SpaceX_Machine Learning Prediction_Part_5.ipynb
dashboard/: lab_jupyter_launch_site_location.ipynb  spacex_dash_app.py
data_collection/: jupyter-labs-spacex-data-collection-api.ipynb  jupyter-labs-webscraping.ipynb
data_wrangling/: labs-jupyter-spacex-Data wrangling.ipynb
eda/: edadataviz.ipynb  jupyter-labs-eda-sql-coursera_sqllite.ipynb
